# ebike-simulation

ebike_simulation_project/: README.md  main.py  pyproject.toml  requirements.txt
ebike_simulation_project/ebike_simulation_project/: .gitignore  README.md  main.py
ebike_simulation_project/ebike_simulation_project/data/: example_gps.csv
ebike_simulation_project/ebike_simulation_project/src/ebike_sim/: __init__.py  exceptions.py  physics.py  route_analyzer.py
ebike_simulation_project/ebike_simulation_project/tests/: test_battery.py
ebike_simulation_project/src/ebike_sim/: battery.py  config.py  gps_reader.py  motor.py  parameter_studies.py  physics.py  report.py  route_analyzer.py  simulation.py  visualization.py
ebike_simulation_project/src/ebike_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ebike_simulation_project/tests/: test_physics.py  test_route_analyzer.py
